# FlightPath

./: .gitignore  CMakeLists.txt  GETTING_STARTED.md  LINUX_SSH.md  README.md  patch_roaddetector.diff  test_perf.cpp
.jules/: bolt.md
data/: README.md
models/: download_models.md
scripts/: build.bat  build.sh  setup.bat  setup_linux.sh
src/: Config.h  LaneDetector.cpp  LaneDetector.h  ObjectDetector.cpp  ObjectDetector.h  PathPlanner.cpp  PathPlanner.h  RoadDetector.cpp  RoadDetector.cpp.orig  RoadDetector.h  VideoProcessor.cpp  VideoProcessor.h  Visualizer.cpp  Visualizer.h  main.cpp
src/utility/: DroppingSafeQueue.h
src/utils/: DroppingSafeQueue.h
